--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -12,8 +12,8 @@ on:
   # push:
   #   branches:
   #     - main
-  # schedule:
-  #   - cron: 0 16 * * *
+  schedule:
+     - cron: 0 16 * * *
   workflow_dispatch:
   repository_dispatch:
 
