--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -23,7 +23,7 @@ env:
   # REPO_URL: https://github.com/openwrt/openwrt.git
   REPO_BRANCH: master
   # REPO_BRANCH: main
-  FEEDS_CONF: feeds.conf.default
+  # FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
@@ -112,7 +112,7 @@ jobs:
 
     - name: 加载自定义feeds
       run: |
-        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        # [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
