--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -18,8 +18,8 @@ on:
   repository_dispatch:
 
 env:
-  # REPO_URL: https://github.com/coolsnowwolf/lede.git
-  REPO_URL: https://github.com/immortalwrt/immortalwrt.git
+  REPO_URL: https://github.com/coolsnowwolf/lede.git
+  # REPO_URL: https://github.com/immortalwrt/immortalwrt.git
   # REPO_URL: https://github.com/openwrt/openwrt.git
   REPO_BRANCH: master
   # REPO_BRANCH: main
