--- a/.config
+++ b/.config
@@ -3197,7 +3197,7 @@ CONFIG_PERL_NOCOMMENT=y
 # CONFIG_PACKAGE_perl-html-tree is not set
 # CONFIG_PACKAGE_perl-http-cookies is not set
 # CONFIG_PACKAGE_perl-http-daemon is not set
-# CONFIG_PACKAGE_perl-http-date is not set
+CONFIG_PACKAGE_perl-http-date=y
 # CONFIG_PACKAGE_perl-http-message is not set
 # CONFIG_PACKAGE_perl-http-negotiate is not set
 # CONFIG_PACKAGE_perl-http-server-simple is not set
@@ -3235,18 +3235,18 @@ CONFIG_PERL_NOCOMMENT=y
 # CONFIG_PACKAGE_perlbase-autosplit is not set
 # CONFIG_PACKAGE_perlbase-autouse is not set
 # CONFIG_PACKAGE_perlbase-b is not set
-# CONFIG_PACKAGE_perlbase-base is not set
+CONFIG_PACKAGE_perlbase-base=y
 # CONFIG_PACKAGE_perlbase-benchmark is not set
 # CONFIG_PACKAGE_perlbase-bigint is not set
 # CONFIG_PACKAGE_perlbase-bignum is not set
 # CONFIG_PACKAGE_perlbase-blib is not set
-# CONFIG_PACKAGE_perlbase-bytes is not set
-# CONFIG_PACKAGE_perlbase-charnames is not set
-# CONFIG_PACKAGE_perlbase-class is not set
+CONFIG_PACKAGE_perlbase-bytes=y
+CONFIG_PACKAGE_perlbase-charnames=y
+CONFIG_PACKAGE_perlbase-class=y
 # CONFIG_PACKAGE_perlbase-compress is not set
-# CONFIG_PACKAGE_perlbase-config is not set
+CONFIG_PACKAGE_perlbase-config=y
 # CONFIG_PACKAGE_perlbase-cpan is not set
-# CONFIG_PACKAGE_perlbase-cwd is not set
+CONFIG_PACKAGE_perlbase-cwd=y
 # CONFIG_PACKAGE_perlbase-data is not set
 # CONFIG_PACKAGE_perlbase-db is not set
 # CONFIG_PACKAGE_perlbase-db-file is not set
@@ -3257,38 +3257,38 @@ CONFIG_PERL_NOCOMMENT=y
 # CONFIG_PACKAGE_perlbase-dirhandle is not set
 # CONFIG_PACKAGE_perlbase-dumpvalue is not set
 # CONFIG_PACKAGE_perlbase-dumpvar is not set
-# CONFIG_PACKAGE_perlbase-dynaloader is not set
+CONFIG_PACKAGE_perlbase-dynaloader=y
 # CONFIG_PACKAGE_perlbase-encode is not set
 # CONFIG_PACKAGE_perlbase-encoding is not set
 # CONFIG_PACKAGE_perlbase-english is not set
 # CONFIG_PACKAGE_perlbase-env is not set
-# CONFIG_PACKAGE_perlbase-errno is not set
-# CONFIG_PACKAGE_perlbase-essential is not set
+CONFIG_PACKAGE_perlbase-errno=y
+CONFIG_PACKAGE_perlbase-essential=y
 # CONFIG_PACKAGE_perlbase-experimental is not set
 # CONFIG_PACKAGE_perlbase-extutils is not set
 # CONFIG_PACKAGE_perlbase-fatal is not set
-# CONFIG_PACKAGE_perlbase-fcntl is not set
+CONFIG_PACKAGE_perlbase-fcntl=y
 # CONFIG_PACKAGE_perlbase-feature is not set
 # CONFIG_PACKAGE_perlbase-fields is not set
-# CONFIG_PACKAGE_perlbase-file is not set
+CONFIG_PACKAGE_perlbase-file=y
 # CONFIG_PACKAGE_perlbase-filecache is not set
-# CONFIG_PACKAGE_perlbase-filehandle is not set
+CONFIG_PACKAGE_perlbase-filehandle=y
 # CONFIG_PACKAGE_perlbase-filetest is not set
 # CONFIG_PACKAGE_perlbase-filter is not set
 # CONFIG_PACKAGE_perlbase-findbin is not set
 # CONFIG_PACKAGE_perlbase-gdbm-file is not set
-# CONFIG_PACKAGE_perlbase-getopt is not set
+CONFIG_PACKAGE_perlbase-getopt=y
 # CONFIG_PACKAGE_perlbase-hash is not set
 # CONFIG_PACKAGE_perlbase-http-tiny is not set
-# CONFIG_PACKAGE_perlbase-i18n is not set
+CONFIG_PACKAGE_perlbase-i18n=y
 # CONFIG_PACKAGE_perlbase-if is not set
-# CONFIG_PACKAGE_perlbase-integer is not set
-# CONFIG_PACKAGE_perlbase-io is not set
+CONFIG_PACKAGE_perlbase-integer=y
+CONFIG_PACKAGE_perlbase-io=y
 # CONFIG_PACKAGE_perlbase-ipc is not set
 # CONFIG_PACKAGE_perlbase-json-pp is not set
 # CONFIG_PACKAGE_perlbase-less is not set
-# CONFIG_PACKAGE_perlbase-list is not set
-# CONFIG_PACKAGE_perlbase-locale is not set
+CONFIG_PACKAGE_perlbase-list=y
+CONFIG_PACKAGE_perlbase-locale=y
 # CONFIG_PACKAGE_perlbase-math is not set
 # CONFIG_PACKAGE_perlbase-memoize is not set
 # CONFIG_PACKAGE_perlbase-meta-notation is not set
@@ -3302,23 +3302,23 @@ CONFIG_PERL_NOCOMMENT=y
 # CONFIG_PACKAGE_perlbase-open is not set
 # CONFIG_PACKAGE_perlbase-ops is not set
 # CONFIG_PACKAGE_perlbase-ostype is not set
-# CONFIG_PACKAGE_perlbase-params is not set
+CONFIG_PACKAGE_perlbase-params=y
 # CONFIG_PACKAGE_perlbase-perl5db is not set
 # CONFIG_PACKAGE_perlbase-perlio is not set
 # CONFIG_PACKAGE_perlbase-pod is not set
-# CONFIG_PACKAGE_perlbase-posix is not set
-# CONFIG_PACKAGE_perlbase-re is not set
+CONFIG_PACKAGE_perlbase-posix=y
+CONFIG_PACKAGE_perlbase-re=y
 # CONFIG_PACKAGE_perlbase-safe is not set
-# CONFIG_PACKAGE_perlbase-scalar is not set
+CONFIG_PACKAGE_perlbase-scalar=y
 # CONFIG_PACKAGE_perlbase-sdbm-file is not set
 # CONFIG_PACKAGE_perlbase-search is not set
-# CONFIG_PACKAGE_perlbase-selectsaver is not set
+CONFIG_PACKAGE_perlbase-selectsaver=y
 # CONFIG_PACKAGE_perlbase-selfloader is not set
 # CONFIG_PACKAGE_perlbase-sigtrap is not set
-# CONFIG_PACKAGE_perlbase-socket is not set
+CONFIG_PACKAGE_perlbase-socket=y
 # CONFIG_PACKAGE_perlbase-sort is not set
 # CONFIG_PACKAGE_perlbase-storable is not set
-# CONFIG_PACKAGE_perlbase-symbol is not set
+CONFIG_PACKAGE_perlbase-symbol=y
 # CONFIG_PACKAGE_perlbase-sys is not set
 # CONFIG_PACKAGE_perlbase-tap is not set
 # CONFIG_PACKAGE_perlbase-term is not set
@@ -3326,15 +3326,15 @@ CONFIG_PERL_NOCOMMENT=y
 # CONFIG_PACKAGE_perlbase-text is not set
 # CONFIG_PACKAGE_perlbase-thread is not set
 # CONFIG_PACKAGE_perlbase-threads is not set
-# CONFIG_PACKAGE_perlbase-tie is not set
-# CONFIG_PACKAGE_perlbase-time is not set
-# CONFIG_PACKAGE_perlbase-unicode is not set
-# CONFIG_PACKAGE_perlbase-unicore is not set
+CONFIG_PACKAGE_perlbase-tie=y
+CONFIG_PACKAGE_perlbase-time=y
+CONFIG_PACKAGE_perlbase-unicode=y
+CONFIG_PACKAGE_perlbase-unicore=y
 # CONFIG_PACKAGE_perlbase-universal is not set
 # CONFIG_PACKAGE_perlbase-user is not set
-# CONFIG_PACKAGE_perlbase-utf8 is not set
+CONFIG_PACKAGE_perlbase-utf8=y
 # CONFIG_PACKAGE_perlbase-version is not set
-# CONFIG_PACKAGE_perlbase-xsloader is not set
+CONFIG_PACKAGE_perlbase-xsloader=y
 # end of Perl
 
 #
@@ -3717,13 +3717,14 @@ CONFIG_RUST_SCCACHE_DIR=""
 #
 CONFIG_PACKAGE_libbz2=y
 # CONFIG_PACKAGE_liblz4 is not set
-# CONFIG_PACKAGE_liblzma is not set
+CONFIG_PACKAGE_liblzma=y
 # CONFIG_PACKAGE_libunrar is not set
 # CONFIG_PACKAGE_libzip-gnutls is not set
 # CONFIG_PACKAGE_libzip-mbedtls is not set
 # CONFIG_PACKAGE_libzip-nossl is not set
 # CONFIG_PACKAGE_libzip-openssl is not set
-# CONFIG_PACKAGE_libzstd is not set
+CONFIG_PACKAGE_libzstd=y
+CONFIG_ZSTD_OPTIMIZE_O3=y
 # end of Compression
 
 #
@@ -6694,13 +6695,21 @@ CONFIG_PACKAGE_wol=y
 #
 # CONFIG_PACKAGE_bsdtar is not set
 # CONFIG_PACKAGE_bsdtar-noopenssl is not set
-# CONFIG_PACKAGE_bzip2 is not set
+CONFIG_PACKAGE_bzip2=y
 # CONFIG_PACKAGE_gzip is not set
 # CONFIG_PACKAGE_lz4 is not set
 # CONFIG_PACKAGE_pigz is not set
 # CONFIG_PACKAGE_unrar is not set
 CONFIG_PACKAGE_unzip=y
-# CONFIG_PACKAGE_xz-utils is not set
+CONFIG_PACKAGE_xz-utils=y
+# CONFIG_PACKAGE_lzmadec is not set
+# CONFIG_PACKAGE_lzmainfo is not set
+CONFIG_PACKAGE_xz=y
+# CONFIG_PACKAGE_xzdec is not set
+# CONFIG_PACKAGE_xzdiff is not set
+# CONFIG_PACKAGE_xzgrep is not set
+# CONFIG_PACKAGE_xzless is not set
+# CONFIG_PACKAGE_xzmore is not set
 # CONFIG_PACKAGE_zipcmp is not set
 # CONFIG_PACKAGE_zipmerge is not set
 # CONFIG_PACKAGE_ziptool is not set
@@ -7226,9 +7235,9 @@ CONFIG_DOCKER_STO_EXT4=y
 # CONFIG_PACKAGE_fuse-overlayfs is not set
 # CONFIG_PACKAGE_fxload is not set
 # CONFIG_PACKAGE_gammu is not set
-# CONFIG_PACKAGE_gawk is not set
+CONFIG_PACKAGE_gawk=y
 # CONFIG_PACKAGE_gddrescue is not set
-# CONFIG_PACKAGE_getopt is not set
+CONFIG_PACKAGE_getopt=y
 # CONFIG_PACKAGE_giflib-utils is not set
 # CONFIG_PACKAGE_gkermit is not set
 # CONFIG_PACKAGE_gl-puli-mcu is not set
@@ -7408,7 +7417,13 @@ CONFIG_STRACE_NONE=y
 # CONFIG_PACKAGE_sysrepocfg is not set
 # CONFIG_PACKAGE_sysrepoctl is not set
 # CONFIG_PACKAGE_sysstat is not set
-# CONFIG_PACKAGE_tar is not set
+CONFIG_PACKAGE_tar=y
+# CONFIG_PACKAGE_TAR_POSIX_ACL is not set
+# CONFIG_PACKAGE_TAR_XATTR is not set
+CONFIG_PACKAGE_TAR_BZIP2=y
+CONFIG_PACKAGE_TAR_GZIP=y
+CONFIG_PACKAGE_TAR_XZ=y
+CONFIG_PACKAGE_TAR_ZSTD=y
 # CONFIG_PACKAGE_taskset is not set
 # CONFIG_PACKAGE_taskwarrior is not set
 # CONFIG_PACKAGE_telegraf is not set
